# leapserial

./: .gitignore  .travis.yml  Allocation.cpp  Allocation.h  Archive.cpp  Archive.h  ArchiveFlatbuffer.cpp  ArchiveFlatbuffer.h  ArchiveJSON.cpp  ArchiveJSON.h  CMakeLists.txt  Descriptor.cpp  Descriptor.h  IArchiveImpl.cpp  IArchiveImpl.h  LeapArchive.h  LeapSerial-configVersion.cmake.in  LeapSerial.h  LeapSerial.wxs  LeapSerialConfig.h.in  OArchiveImpl.cpp  OArchiveImpl.h  ProtobufType.h  README.md  Serializer.h  base.h  field_descriptor.h  field_serializer.h  field_serializer_t.h  leapserial-config.cmake.in  leapserial-configVersion.cmake.in  serial_traits.h  stdafx.h  version.cmake
LeapSerial/: AESStream.h  Allocation.h  Archive.h  ArchiveFlatbuffer.h  ArchiveJSON.h  ArchiveProtobuf.h  BoundedStream.h  BufferedStream.h  CompressionStream.h  Descriptor.h  FilterStreamBase.h  ForwardingStream.h  IArchiveImpl.h  IArchiveImplV0.h  IArchiveProtobuf.h  IArray.h  IDictionary.h  IInputStream.h  IOutputStream.h  LeapSerial.h  LeapSerialEnumerator.h  MemoryStream.h  OArchiveImpl.h  OArchiveImplV0.h  OArchiveProtobuf.h  ProtobufType.h  SchemaWriterProtobuf.h  StreamAdapter.h  base.h  descriptors.h  field_descriptor.h  field_serializer.h  field_serializer_t.h  optional.h  serial_traits.h  serialization_error.h
cmake-modules/: AddPCH.cmake  FindFlatBuffers.cmake  FindProtobuf.cmake  FindZLIB.cmake
contrib/: CMakeLists.txt
contrib/aes/: CMakeLists.txt  aes256.c  aes256.h  rijndael-alg-fst.c  rijndael-alg-fst.h
contrib/bzip2/: CMakeLists.txt
contrib/zlib/: CMakeLists.txt  inflate.c  zconf.h
leapserial/: Allocation.h  ArchiveJSON.h  IArchiveImpl.h  OArchiveImpl.h  ProtobufType.h  field_descriptor.h  field_serializer_t.h  serial_traits.h
scripts/: copyright_check.sh  trailingnewline_check.sh  whitespace_check.sh
src/: CMakeLists.txt  gtest-all-guard.cpp
src/LeapSerial/: AESStream.cpp  AESStream.h  Allocation.cpp  Allocation.h  Archive.cpp  Archive.h  ArchiveFlatbuffer.cpp  ArchiveFlatbuffer.h  ArchiveJSON.cpp  ArchiveJSON.h  ArchiveLeapSerial.cpp  ArchiveLeapSerial.h  ArchiveLeapSerialV0.cpp  ArchiveLeapSerialV0.h  ArchiveProtobuf.h  BoundedStream.cpp  BoundedStream.h  BufferedInputStream.cpp  BufferedInputStream.h  BufferedStream.cpp  BufferedStream.h  CMakeLists.txt  CompressionStream.cpp  CompressionStream.h  CompressionStreamInternal.h  Descriptor.cpp  Descriptor.h  FilterStreamBase.cpp  FilterStreamBase.h  ForwardingStream.h  IArchiveProtobuf.cpp  IArchiveProtobuf.h  IArray.h  IDictionary.h  IInputStream.h  IOutputStream.h  LeapSerial.h  LeapSerialConfig.h  MemoryStream.cpp  MemoryStream.h  (+22 more)
src/LeapSerial/test/: AESStreamTest.cpp  ArchiveFlatbufferTest.cpp  ArchiveJSONTest.cpp  ArchiveLeapSerialTest.cpp  ArchiveProtobufTest.cpp  BoundedStreamTest.cpp  BufferedStreamTest.cpp  CMakeLists.txt  ChronoTypesTest.cpp  CompressionStreamTest.cpp  InheritanceTest.cpp  MapTest.cpp  MemoryStreamTest.cpp  OptionalTest.cpp  PathologicalTest.cpp  PointerTest.cpp  PrettyPrintTest.cpp  SchemaTest.cpp  SerialCallbackTest.cpp  SerialFormatTest.cpp  SerializationTest.cpp  SerializerEnumerationTest.cpp  TestObject.fbs  TestObject.h  TestProtobuf.proto  TestProtobufLS.hpp  stdafx.h
src/LeapSerialBench/: Benchmark.h  CMakeLists.txt  Encryption.cpp  Encryption.h  LeapSerialBench.cpp  LeapSerialBench.h  RoundTrip.cpp  RoundTrip.fbs  RoundTrip.h  RoundTrip.proto  Utility.cpp  Utility.h
src/leapserial/: AESStream.cpp  AESStream.h  Allocation.cpp  Archive.cpp  Archive.h  ArchiveFlatbuffer.cpp  ArchiveJSON.cpp  BoundedStream.cpp  BufferedInputStream.cpp  BufferedInputStream.h  BufferedStream.cpp  CMakeLists.txt  CompressionStream.cpp  CompressionStream.h  Descriptor.cpp  Descriptor.h  FilterStreamBase.cpp  FilterStreamBase.h  ForwardingStream.h  IArchiveImpl.cpp  IArchiveImpl.h  IArchiveImplV0.cpp  IArchiveProtobuf.cpp  IArchiveProtobuf.h  LeapSerial.h  LeapSerialConfig.h  LeapSerialEnumerator.cpp  MemoryStream.cpp  OArchiveImpl.cpp  OArchiveImpl.h  OArchiveImplV0.cpp  OArchiveProtobuf.cpp  OArchiveProtobuf.h  ProtobufUtil.cpp  ProtobufUtil.hpp  SchemaWriterProtobuf.cpp  StreamAdapter.cpp  Utility.cpp  Utility.hpp  base.h  (+8 more)
src/leapserial/test/: .gitignore  AESStreamTest.cpp  ArchiveFlatbufferTest.cpp  ArchiveJSONTest.cpp  ArchiveLeapSerialTest.cpp  ArchiveProtobufTest.cpp  BoundedStreamTest.cpp  BufferedStreamTest.cpp  CMakeLists.txt  ChronoTypesTest.cpp  CompressionStreamTest.cpp  InheritanceTest.cpp  LeapArchiveTest.cpp  MapTest.cpp  MemoryStreamTest.cpp  OptionalTest.cpp  PathologicalTest.cpp  PointerTest.cpp  PolymorphicClassTest.cpp  PrettyPrintTest.cpp  SchemaTest.cpp  SerialCallbackTest.cpp  SerialFormatTest.cpp  SerializationTest.cpp  SerializerEnumerationTest.cpp  TestObject.h  TestProtobuf.proto  TestProtobufLS.hpp  stdafx.h
src/leapserialbench/: Benchmark.h  Encryption.cpp  Encryption.h  LeapSerialBench.cpp  Utility.cpp  Utility.h
standard/: SetStandardOutputVariables.cmake
test/: ArchiveFlatbufferTest.cpp  ArchiveJSONTest.cpp  DescriptorTest.cpp  LeapArchiveTest.cpp  PrettyPrintTest.cpp  SerialFormatTest.cpp  SerializationTest.cpp  TestObject.fbs  TestObject.h
